...
            android:text="@string/login_with_email"
            android:textAllCaps="false"
            android:textSize="15sp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonReg"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_stroke"
            android:text="@string/create_account"
...
